[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "~0.2.6"
spin = "~0.9.4"
uart_16550 = "0.2.8"
riscv = "0.9.0"

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]